Final Patch User and Admin Completion